# uflubber

./: Cargo.toml  client.toml  flubber.toml
client-gtk/: Cargo.toml
client-gtk/src/: main.rs
client-tui/: Cargo.toml
client-tui/src/: config.rs  main.rs
irc-async/: Cargo.toml  README.md
irc-async/examples/: echo-bot.rs
irc-async/src/: lib.rs
irc-async/src/client/: config.rs  mod.rs  stream.rs
irc-async/src/proto/: colors.rs  command.rs  errors.rs  irc.rs  message.rs  mod.rs  mode.rs  response.rs
irc-backend/: Cargo.toml
irc-backend/src/: config.rs  main.rs
irc-plugin/: Cargo.toml
proto/: Cargo.toml
proto/src/: backend.rs  client.rs  lib.rs
server/: Cargo.toml
server/src/: client.rs  config.rs  main.rs
src/: json.rs  lib.rs
