[package]
name = "uflubber"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[workspace]
members = ["proto"]

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "irc-plugin"
path = "bin/irc-plugin.rs"

[dependencies]
anyhow = "1.0"
bytes = "0.5"
futures = "0.3"
irc-async = "0.1"
proto = { path = "proto" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["fs", "io-util", "macros", "process", "rt-core"] }
tokio-serde = { version = "0.5", features = ["json"] }
tokio-util = { version = "0.2", features = ["codec"] }
toml = "0.5"