[package]
name = "client-tui"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
proto = { path = "../proto" }
rustyline = "5.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
termion = "1.5"
tokio = { version = "0.2", features = ["fs", "io-util", "macros", "net", "tcp"] }
tokio-serde = { version = "0.6", features = ["json"] }
tokio-util = { version = "0.2", features = ["codec"] }
toml = "0.5"
