[package]
name = "server"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["dns", "fs", "io-std", "io-util", "macros", "process", "rt-core", "tcp"] }
tokio-serde = { version = "0.6", features = ["json"] }
tokio-util = { version = "0.2", features = ["codec"] }
toml = "0.5"
